<resources>
    <string name="app_name">ExpenseTrackerFire</string>
    <string name="title_activity_registration">RegistrationActivity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="client_id">78667086404-0akvmpkb6rtbcqiehuledqpfe0jnuek0.apps.googleusercontent.com</string>

    <string name="text">ExpenseTrackerFire ExpenseTrackerFire ExpenseTrackerFire ExpenseTrackerFire ExpenseTrackerFire ExpenseTrackerFire ExpenseTrackerFire ExpenseTrackerFire </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hintemail">Enter your email</string>
    <string name="welback">Welcome back! Please enter your details.</string>
    <string name="daudong">Log in to your account</string>
    <string name="forgetpass"> Forget Password?</string>

    <string name="login">Login</string>
    <string name="signup">Do not have account? Sign up here</string>
    <string name="changeLang">Change Language</string>

    <string name="incomeshort">Income</string>
    <string name="expenseshort">Expense</string>
    <string name="totalbalance">TOTAL BALANCE</string>
    <string name="totalincome">TOTAL INCOME</string>
    <string name="totalexpense">TOTAL EXPENSE</string>
    <string name="overview">Statistics</string>
    <string name="allincome">All Income</string>
    <string name="allexpense">All Expense</string>
    <string name="manager">Expense Management</string>
    <string name="homeincome">Income</string>
    <string name="homeexpense">Expense</string>


    <string name="recent">Recent Transaction</string>
    <string name="dashbor">Dash Board</string>
    <string name="logoutt">Log out</string>
    <string name="lightmode">Light Mode</string>

    <string name="create">Create an account</string>
    <string name="namee">CName</string>
    <string name="namee_hint">Enter your name</string>
    <string name="reg">Register</string>
    <string name="already">Already have account ? Sign in here</string>














</resources>