<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_login"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:src="@drawable/starfinal"
                        android:layout_margin="10dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:text=""
                        android:textSize="4dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/horizontal_imgvie"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
		        android:text="@string/daudong"
                android:layout_margin="10dp"
                android:textColor="@color/end"
                android:textAppearance="?android:textAppearanceLarge"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welback"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="16dp"
                android:textColor="#B5B1B1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:textColor="@color/end" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hintemail"
                android:background="@drawable/editext_background"
                android:padding="15dp"
                android:id="@+id/email_login"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:textColor="@color/end" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:background="@drawable/editext_background"
                android:padding="15dp"
                android:id="@+id/password_login"
                />
            <TextView
                android:id="@+id/forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/end"
                android:text="@string/forgetpass"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/signup_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/end"
                android:text="@string/signup"
                android:padding="5dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/login"
                android:background="@drawable/editext_background"
                android:id="@+id/btn_login"
                android:textAppearance="?android:textAppearanceLarge"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/end"
                android:text="or"
                android:padding="5dp"/>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/gg"
                android:id="@+id/btn_login_gg"
                android:textAppearance="?android:textAppearanceLarge"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="right"
                android:src="@drawable/lang"
                android:id="@+id/changeMyLang"
                android:textAppearance="?android:textAppearanceLarge"
                />
<!--            <Spinner-->
<!--                android:id="@+id/changeMyLang"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_gravity="right"-->
<!--                android:layout_height="wrap_content"/>-->


        </LinearLayout>

</LinearLayout>